# qt-genie

./: .gitmodules  CMakeLists.txt  README.md  data.cpp  data.h  main.cpp  mainwindow.cpp  mainwindow.h  qt-genie.qrc
resources/: class.txt  whitelist.txt
